<resources>
    <string name="app_name">CBCNewsDemo</string>
    <string name="title_news">News</string>
    <string name="title_saved">Like</string>

    <string name="save">Save</string>
    <string name="source">SOURCE</string>
    <string name="image">IMAGE</string>
    <string name="title">TITLE</string>
    <string name="description">DESCRIPTION</string>
    <string name="published_at">PUBLISHED AT</string>
    <string name="type">TYPE</string>
    <string name="saved"> Article Saved! </string>
    <string name="undo">Undo</string>
    <string name="deleted"> Article Deleted! </string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="show_by_type">Filter news by type: </string>
</resources>